# ai-agnets

./: .gitignore  CONTEXT.md  DummyHttpClient.java  README.md  SampleHttpClient.java  pyproject.toml
docs/: architecture_handover.md
src/ai_agents/: __init__.py  main.py
src/ai_agents/agents/: graph.py  resolver_agent.py
src/ai_agents/agents/tools/: resolver_tools.py
src/ai_agents/analyzers/: base.py
src/ai_agents/analyzers/java_net_http/: __init__.py  analyzer.py
src/ai_agents/index/: symbol_index.py
src/ai_agents/llm/: client.py
src/ai_agents/models/: api_call.py
src/ai_agents/output/: openapi.py
src/ai_agents/parsers/: java_parser.py
src/ai_agents/scanner/: chain_detector.py  file_scanner.py
src/ai_agents/utils/: file_scanner.py
tests/java_samples/: ApiConstants.java  ApiService.java  TenantService.java
