[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents"
version = "0.1.0"
description = "Java HTTP client → OpenAPI 3.1.0 generator powered by Tree-sitter and LangChain"
requires-python = ">=3.9"
dependencies = [
    # Core orchestration
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",

    # LLM providers (install the one you need)
    "langchain-google-genai>=2.0",
    "langchain-ollama>=0.2",

    # AST parsing
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",

    # Data validation
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "black",
    "ruff",
]

[project.scripts]
run-agent = "ai_agents.main:main"

[tool.setuptools.packages.find]
where = ["src"]
