[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents"
version = "0.1.0"
description = "Minimal MVP AI Agents package"
requires-python = ">=3.9"

[project.scripts]
run-agent = "ai_agents.main:main"

[tool.setuptools.packages.find]
where = ["src"]
