[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents"
version = "0.1.0"
description = "Java REST API analyzer — detects outbound API calls and generates OpenAPI 3.1.0 specs"
requires-python = ">=3.9"
dependencies = [
    "tree-sitter>=0.22,<0.25",
    "tree-sitter-java>=0.23",
    "langchain>=0.2",
    "langchain-ollama>=0.1",
    "langchain-core>=0.2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
analyze-apis = "ai_agents.main:main"

[tool.setuptools.packages.find]
where = ["src"]
